--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
     bottom: 106px;
     position: absolute;
     justify-content: center;
-    display: flex;
+    display: inline-block;
     margin-left: auto; 
     margin-right: auto; 
     width: 100%;
