--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ body {
     bottom: 106px;
     position: absolute;
     justify-content: center;
+    display: flex;
     margin-left: auto; 
     margin-right: auto; 
     width: 100%;
