--- a/style.css
+++ b/style.css
@@ -81,11 +81,11 @@ body {
     margin-top: 5px;
     font-family: 'regular';
     font-size: 16px;
-    color: hsla(0, 0%, 0%, 0.5);
+    color: #1495F2;
     background-color: #fff;
     width: 100%;
     height: 51px;
-    border: #e2e2e2 1px solid;
+    border: #1495F2 1px solid;
     border-radius: 15px;
     cursor: pointer;
 }
